1999-10-12  Stefan Monnier  <monnier@cs.yale.edu>

	* simple.el (shell-command, shell-command-on-region): use make-temp-file.
	(clone-buffer, clone-process, clone-buffer-hook): new functions.

	* subr.el (with-current-buffer): don't use backquotes to avoid
	  bootstrapping problems.
	loadup.el (load-path): add subdirs for bootstrapping.
	(docstrings): ignore errors during bootstrapping.
	(args): new `bootstrap' argument (for use in place of `dump').

1999-10-12  Emmanuel Briot  <briot@gnat.com>

	* ada-stmt.el: Doc-string fixes.

1999-10-12  Gerd Moellmann  <gerd@gnu.org>

	* recentf.el: New file.

	* ps-mode.el: New file.

	* files.el (auto-mode-alist): Add ps-mode for .eps and .ps,
	case insensitive.

1999-10-12  Richard Sharman  <rsharman@pobox.com>

	* sh-script.el: Added support for indenting existing scripts.
	(sh-mode-map): Added new bindings.
	(sh-mode): Updated mode doc-string for new commands, added
	make-local-variable calls, initialize mode-specific variables.
	(sh-indent-line):  Renamed to sh-basic-indent-line;  sh-indent-line
	is now a different function.
	(sh-header-marker):  Changed docstring.
	(sh-set-shell): Initialize mode-specific variables.
	(sh-case, sh-for, sh-if, sh-indexed-loop, sh-repeat, sh-select)
	(sh-tmp-file, sh-until, sh-until, sh-while, sh-while-getopts):
	Changed these define-skeleton calls to work with user-specified
	indentation settings.
	(sh-basic-indent-line, sh-blink, sh-calculate-indent)
	(sh-check-paren-in-case, sh-check-rule, sh-do-nothing)
	(sh-electric-hash, sh-electric-less, sh-electric-rparen)
	(sh-find-prev-matching, sh-find-prev-switch, sh-get-indent-info)
	(sh-get-indent-var-for-line, sh-get-kw, sh-get-word)
	(sh-goto-match-for-done, sh-goto-matching-case, sh-goto-matching-if)
	(sh-guess-basic-offset, sh-handle-after-case-label)
	(sh-handle-prev-case, sh-handle-prev-case-alt-end, sh-handle-prev-do)
	(sh-handle-prev-done, sh-handle-prev-else, sh-handle-prev-esac)